--- a/armasm.html
+++ b/armasm.html
@@ -24,6 +24,10 @@ body {
 	text-align: left;
 	border: none;
 }
+.tarmasm th:last-child {
+	width: auto;
+	min-width: 4em;
+}
 .tarmasm td {
 	text-align: center;
 	font-size: 92%;
@@ -33,6 +37,9 @@ body {
 	text-align: left;
 	padding-left: 3px;
 	border: 1px solid black;
+}
+.lastleft td:last-child {
+	text-align: left;
 }
 a {
 	color: gray !important;
@@ -45,9 +52,9 @@ a {
 <table id="t1188a" class=tarmasm></table>
 <script>
 makeTable("t1188a", function() {/*
-代入	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles
-Rd = u8	0	0	1	0	0	Rd			u8								1
-Rd = Rm	0	1	0	0	0	1	1	0	Rd3	Rm				Rd2-0			1,3
+代入	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles	flags
+Rd = u8	0	0	1	0	0	Rd			u8								1	N Z
+Rd = Rm	0	1	0	0	0	1	1	0	Rd3	Rm				Rd2-0			1,3	-
 */})
 </script>
 ※Rd3とRd2-0の4bitでRdを指定する、RdがPCの時3cycles
@@ -55,49 +62,50 @@ Rd = Rm	0	1	0	0	0	1	1	0	Rd3	Rm				Rd2-0			1,3
 <table id="t1188b" class=tarmasm></table>
 <script>
 makeTable("t1188b", function() {/*
-演算	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles
-Rd += u8	0	0	1	1	0	Rd			u8								1
-Rd -= u8	0	0	1	1	1	Rd			u8								1
-Rd = PC + u8	1	0	1	0	0	Rd			u8								1
-Rd += Rm	0	1	0	0	0	1	0	0	Rd3	Rm				Rd2-0			1,3
-Rd = Rn + u3	0	0	0	1	1	1	0	u3			Rn			Rd			1
-Rd = Rn - u3	0	0	0	1	1	1	1	u3			Rn			Rd			1
-Rd = Rn + Rm	0	0	0	1	1	0	0	Rm			Rn			Rd			1
-Rd = Rn - Rm	0	0	0	1	1	0	1	Rm			Rn			Rd			1
-Rd = -Rm	0	1	0	0	0	0	1	0	0	1	Rm			Rd			1
-Rd *= Rm	0	1	0	0	0	0	1	1	0	1	Rm			Rd			1
-Rd = Rm &lt;&lt; u5	0	0	0	0	0	u5					Rm			Rd			1
-Rd = Rm &gt;&gt; u5	0	0	0	0	1	u5					Rm			Rd			1
-Rd &lt;&lt;= Rm	0	1	0	0	0	0	0	0	1	0	Rm			Rd			1
-Rd &gt;&gt;= Rm	0	1	0	0	0	0	0	0	1	1	Rm			Rd			1
-Rd = ~Rm	0	1	0	0	0	0	1	1	1	1	Rm			Rd			1
-Rd &amp;= Rm	0	1	0	0	0	0	0	0	0	0	Rm			Rd			1
-Rd |= Rm	0	1	0	0	0	0	1	1	0	0	Rm			Rd			1
-Rd ^= Rm	0	1	0	0	0	0	0	0	0	1	Rm			Rd			1
+演算	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles	flags
+Rd += u8	0	0	1	1	0	Rd			u8								1	N Z C V
+Rd -= u8	0	0	1	1	1	Rd			u8								1	N Z C V
+Rd = PC + u8	1	0	1	0	0	Rd			u8								1	-
+Rd += Rm	0	1	0	0	0	1	0	0	Rd3	Rm				Rd2-0			1,3	-
+Rd = Rn + u3	0	0	0	1	1	1	0	u3			Rn			Rd			1	N Z C V
+Rd = Rn - u3	0	0	0	1	1	1	1	u3			Rn			Rd			1	N Z C V
+Rd = Rn + Rm	0	0	0	1	1	0	0	Rm			Rn			Rd			1	N Z C V
+Rd = Rn - Rm	0	0	0	1	1	0	1	Rm			Rn			Rd			1	N Z C V
+Rd = -Rm	0	1	0	0	0	0	1	0	0	1	Rm			Rd			1	N Z C V
+Rd *= Rm	0	1	0	0	0	0	1	1	0	1	Rm			Rd			1	N Z
+Rd = Rm &lt;&lt; u5	0	0	0	0	0	u5					Rm			Rd			1	N Z C
+Rd = Rm &gt;&gt; u5	0	0	0	0	1	u5					Rm			Rd			1	N Z C
+Rd &lt;&lt;= Rm	0	1	0	0	0	0	0	0	1	0	Rm			Rd			1	N Z C
+Rd &gt;&gt;= Rm	0	1	0	0	0	0	0	0	1	1	Rm			Rd			1	N Z C
+Rd = ~Rm	0	1	0	0	0	0	1	1	1	1	Rm			Rd			1	N Z
+Rd &amp;= Rm	0	1	0	0	0	0	0	0	0	0	Rm			Rd			1	N Z
+Rd |= Rm	0	1	0	0	0	0	1	1	0	0	Rm			Rd			1	N Z
+Rd ^= Rm	0	1	0	0	0	0	0	0	0	1	Rm			Rd			1	N Z
 */})
 </script>
 ※Rd3とRd2-0の4bitでRdを指定する、Rd=PCの時3cycles<br>
 ※Rd=PC+u8: u8は4byte単位<br>
+※シフト演算: シフト量が0のときはCフラグを変更しない
 
 <table id="t1479a" class=tarmasm></table>
 <script>
 makeTable("t1479a", function() {/*
-メモリアクセス	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles
-Rd = [Rn + u5]	0	1	1	1	1	u5					Rn			Rd			2
-Rd = [Rn + u5]W	1	0	0	0	1	u5					Rn			Rd			2
-Rd = [Rn + u5]L	0	1	1	0	1	u5					Rn			Rd			2
-Rd = [PC + u8]L	0	1	0	0	1	Rd			u8								2
-Rd = [Rn + Rm]	0	1	0	1	1	1	0	Rm			Rn			Rd			2
-Rd = [Rn + Rm]C	0	1	0	1	0	1	1	Rm			Rn			Rd			2
-Rd = [Rn + Rm]W	0	1	0	1	1	0	1	Rm			Rn			Rd			2
-Rd = [Rn + Rm]S	0	1	0	1	1	1	1	Rm			Rn			Rd			2
-Rd = [Rn + Rm]L	0	1	0	1	1	0	0	Rm			Rn			Rd			2
-[Rn + u5] = Rd	0	1	1	1	0	u5					Rn			Rd			2
-[Rn + u5]W = Rd	1	0	0	0	0	u5					Rn			Rd			2
-[Rn + u5]L = Rd	0	1	1	0	0	u5					Rn			Rd			2
-[Rn + Rm] = Rd	0	1	0	1	0	1	0	Rm			Rn			Rd			2
-[Rn + Rm]W = Rd	0	1	0	1	0	0	1	Rm			Rn			Rd			2
-[Rn + Rm]L = Rd	0	1	0	1	0	0	0	Rm			Rn			Rd			2
+メモリアクセス	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles	flags
+Rd = [Rn + u5]	0	1	1	1	1	u5					Rn			Rd			2	-
+Rd = [Rn + u5]W	1	0	0	0	1	u5					Rn			Rd			2	-
+Rd = [Rn + u5]L	0	1	1	0	1	u5					Rn			Rd			2	-
+Rd = [PC + u8]L	0	1	0	0	1	Rd			u8								2	-
+Rd = [Rn + Rm]	0	1	0	1	1	1	0	Rm			Rn			Rd			2	-
+Rd = [Rn + Rm]C	0	1	0	1	0	1	1	Rm			Rn			Rd			2	-
+Rd = [Rn + Rm]W	0	1	0	1	1	0	1	Rm			Rn			Rd			2	-
+Rd = [Rn + Rm]S	0	1	0	1	1	1	1	Rm			Rn			Rd			2	-
+Rd = [Rn + Rm]L	0	1	0	1	1	0	0	Rm			Rn			Rd			2	-
+[Rn + u5] = Rd	0	1	1	1	0	u5					Rn			Rd			2	-
+[Rn + u5]W = Rd	1	0	0	0	0	u5					Rn			Rd			2	-
+[Rn + u5]L = Rd	0	1	1	0	0	u5					Rn			Rd			2	-
+[Rn + Rm] = Rd	0	1	0	1	0	1	0	Rm			Rn			Rd			2	-
+[Rn + Rm]W = Rd	0	1	0	1	0	0	1	Rm			Rn			Rd			2	-
+[Rn + Rm]L = Rd	0	1	0	1	0	0	0	Rm			Rn			Rd			2	-
 */})
 </script>
 ※[]後の記号でメモリサイズと符号を表す（W:2byte、L:4byte、C:符号付き1byte、S:符号付き2byte）<br>
@@ -106,12 +114,12 @@ Rd = [Rn + Rm]L	0	1	0	1	1	0	0	Rm			Rn			Rd			2
 <table id="t1188c" class=tarmasm></table>
 <script>
 makeTable("t1188c", function() {/*
-条件判断	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles
-Rn - u8	0	0	1	0	1	Rn			u8								1
-Rn - Rm	0	1	0	0	0	1	0	1	Rn3	Rm				Rn2-0			1
-Rn - Rm	0	1	0	0	0	0	1	0	1	0	Rm			Rn			1
-Rn + Rm	0	1	0	0	0	0	1	0	1	1	Rm			Rn			1
-Rn &amp; Rm	0	1	0	0	0	0	1	0	0	0	Rm			Rn			1
+条件判断	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles	flags
+Rn - u8	0	0	1	0	1	Rn			u8								1	N Z C V
+Rn - Rm	0	1	0	0	0	1	0	1	Rn3	Rm				Rn2-0			1	N Z C V
+Rn - Rm	0	1	0	0	0	0	1	0	1	0	Rm			Rn			1	N Z C V
+Rn + Rm	0	1	0	0	0	0	1	0	1	1	Rm			Rn			1	N Z C V
+Rn &amp; Rm	0	1	0	0	0	0	1	0	0	0	Rm			Rn			1	N Z
 */})
 </script>
 ※Rn3とRn2-0の4bitでRnを指定する
@@ -119,21 +127,21 @@ Rn &amp; Rm	0	1	0	0	0	0	1	0	0	0	Rm			Rn			1
 <table id="t1188d" class=tarmasm></table>
 <script>
 makeTable("t1188d", function() {/*
-分岐	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles
-IF 0 GOTO n8	1	1	0	1	0	0	0	0	n8								1,3
-IF !0 GOTO n8	1	1	0	1	0	0	0	1	n8								1,3
-IF cond GOTO n8	1	1	0	1	cond				n8								1,3
-GOTO n11	1	1	1	0	0	n11											3
-GOTO Rm	0	1	0	0	0	1	1	1	0	Rm				0	0	0	3
-GOSUB Rm	0	1	0	0	0	1	1	1	1	Rm				0	0	0	3
-GOSUB n22	1	1	1	1	0	n22(21-11)											1
--	1	1	1	1	1	n22(10-0)											3
-RET (=#4770)	0	1	0	0	0	1	1	1	0	1	1	1	0	0	0	0	3
+分岐	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles	flags
+IF 0 GOTO n8	1	1	0	1	0	0	0	0	n8								1,3	-
+IF !0 GOTO n8	1	1	0	1	0	0	0	1	n8								1,3	-
+IF cond GOTO n8	1	1	0	1	cond				n8								1,3	-
+GOTO n11	1	1	1	0	0	n11											3	-
+GOTO Rm	0	1	0	0	0	1	1	1	0	Rm				0	0	0	3	-
+GOSUB Rm	0	1	0	0	0	1	1	1	1	Rm				0	0	0	3	-
+GOSUB n22	1	1	1	1	0	n22(21-11)											1	-
+-	1	1	1	1	1	n22(10-0)											3	-
+RET (=#4770)	0	1	0	0	0	1	1	1	0	1	1	1	0	0	0	0	3	-
 */})
 /*
 本来はn24だけど、n22としておく、n22からn24に拡張された後がある
-CALL n24 &lt;&lt; 1	1	1	1	1	0	S	n24(20-11)										-
--	1	1	J1	1	J2	n24(10-0)											4
+CALL n24 &lt;&lt; 1	1	1	1	1	0	S	n24(20-11)										-	-
+-	1	1	J1	1	J2	n24(10-0)											4	-
 */
 </script>
 ※n8/n11/n22:飛び先との命令数の差分から-2した数を指定、分岐するとき3cycles<br>
@@ -142,14 +150,14 @@ CALL n24 &lt;&lt; 1	1	1	1	1	0	S	n24(20-11)										-
 <table id="t1479b" class=tarmasm></table>
 <script>
 makeTable("t1479b", function() {/*
-スタック	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles
-PUSH {regs}	1	0	1	1	0	1	0	LR	R7	R6	R5	R4	R3	R2	R1	R0	1+N
-POP {regs}	1	0	1	1	1	1	0	PC	R7	R6	R5	R4	R3	R2	R1	R0	1,4 +N
-SP += u7	1	0	1	1	0	0	0	0	0	u7							1
-SP -= u7	1	0	1	1	0	0	0	0	1	u7							1
-Rd = SP + u8	1	0	1	0	1	Rd			u8								1
-Rd = [SP + u8]L	1	0	0	1	1	Rd			u8								2
-[SP + u8]L = Rd	1	0	0	1	0	Rd			u8								2
+スタック	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles	flags
+PUSH {regs}	1	0	1	1	0	1	0	LR	R7	R6	R5	R4	R3	R2	R1	R0	1+N	-
+POP {regs}	1	0	1	1	1	1	0	PC	R7	R6	R5	R4	R3	R2	R1	R0	1,4 +N	-
+SP += u7	1	0	1	1	0	0	0	0	0	u7							1	-
+SP -= u7	1	0	1	1	0	0	0	0	1	u7							1	-
+Rd = SP + u8	1	0	1	0	1	Rd			u8								1	-
+Rd = [SP + u8]L	1	0	0	1	1	Rd			u8								2	-
+[SP + u8]L = Rd	1	0	0	1	0	Rd			u8								2	-
 */})
 </script>
 ※u7/u8:4byte単位<br>
@@ -160,45 +168,106 @@ Rd = [SP + u8]L	1	0	0	1	1	Rd			u8								2
 <table id="t1188b2" class=tarmasm></table>
 <script>
 makeTable("t1188b2", function() {/*
-特殊演算	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles
-Rd = REV(Rm)	1	0	1	1	1	0	1	0	0	0	Rm			Rd			1
-Rd = REV16(Rm)	1	0	1	1	1	0	1	0	0	1	Rm			Rd			1
-Rd = REVSH(Rm)	1	0	1	1	1	0	1	0	1	1	Rm			Rd			1
-Rd = ASR(Rm, u5)	0	0	0	1	0	u5					Rm			Rd			1
-ASR Rd, Rm	0	1	0	0	0	0	0	1	0	0	Rm			Rd			1
-BIC Rd, Rm	0	1	0	0	0	0	1	1	1	0	Rm			Rd			1
-ROR Rd, Rm	0	1	0	0	0	0	0	1	1	1	Rm			Rd			1
-ADC Rd, Rm	0	1	0	0	0	0	0	1	0	1	Rm			Rd			1
-SBC Rd, Rm	0	1	0	0	0	0	0	1	1	0	Rm			Rd			1
+特殊演算	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles	flags
+Rd = REV(Rm)	1	0	1	1	1	0	1	0	0	0	Rm			Rd			1	-
+Rd = REV16(Rm)	1	0	1	1	1	0	1	0	0	1	Rm			Rd			1	-
+Rd = REVSH(Rm)	1	0	1	1	1	0	1	0	1	1	Rm			Rd			1	-
+Rd = ASR(Rm, u5)	0	0	0	1	0	u5					Rm			Rd			1	N Z C
+ASR Rd, Rm	0	1	0	0	0	0	0	1	0	0	Rm			Rd			1	N Z C
+BIC Rd, Rm	0	1	0	0	0	0	1	1	1	0	Rm			Rd			1	N Z
+ROR Rd, Rm	0	1	0	0	0	0	0	1	1	1	Rm			Rd			1	N Z C
+ADC Rd, Rm	0	1	0	0	0	0	0	1	0	1	Rm			Rd			1	N Z C V
+SBC Rd, Rm	0	1	0	0	0	0	0	1	1	0	Rm			Rd			1	N Z C V
 */})
 </script>
 ※BIC:ビットクリア、ASR:符号付き右シフト、ROR:右ローテート<br>
 ※REV:byteオーダー反転、REV16:byteオーダー反転(2byteずつ)、REVSH:符号付き16bitを反転32bit化<br>
 ※ADC:キャリー付き足し算、SBC:キャリー付き引き算<br>
+※シフト/ローテート演算: シフト量が0のときはCフラグを変更しない<br>
 
 <table id="t1479d" class=tarmasm></table>
 <script>
 makeTable("t1479d", function() {/*
-メモリアクセス2	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles
-LDM Rn, {regs}	1	1	0	0	1	Rn			R7	R6	R5	R4	R3	R2	R1	R0	1+N
-STM Rn, {regs}	1	1	0	0	0	Rn			R7	R6	R5	R4	R3	R2	R1	R0	1+N
+メモリアクセス2	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles	flags
+LDM Rn, {regs}	1	1	0	0	1	Rn			R7	R6	R5	R4	R3	R2	R1	R0	1+N	-
+STM Rn, {regs}	1	1	0	0	0	Rn			R7	R6	R5	R4	R3	R2	R1	R0	1+N	-
 */})
 </script>
 ※N:指定したレジスタの数（マルチメモリアクセス）<br>
 ※LDM:アドレスRnからregsの小さいレジスタから順に読み込みRnを進める 例）LDM R0,{R1,R2}<br>
-※STM:アドレスRnへregsの小さいレジスタから順に書き込みRnを進める 例）LDM R0,{R1,R2}<br>
+※STM:アドレスRnへregsの小さいレジスタから順に書き込みRnを進める 例）STM R0,{R1,R2}<br>
 
 <table id="t1479c" class=tarmasm></table>
 <script>
 makeTable("t1479c", function() {/*
-その他	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles
-NOP (=0)	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	1
-CPSID (=#B672)	1	0	1	1	0	1	1	0	0	1	1	1	0	0	1	0	1
-CPSIE (=#B662)	1	0	1	1	0	1	1	0	0	1	1	0	0	0	1	0	1
-WFI (=#BF30)	1	0	1	1	1	1	1	1	0	0	1	1	0	0	0	0	2
+その他	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles	flags
+NOP (=0)	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	1	-
+CPSID (=#B672)	1	0	1	1	0	1	1	0	0	1	1	1	0	0	1	0	1	-
+CPSIE (=#B662)	1	0	1	1	0	1	1	0	0	1	1	0	0	0	1	0	1	-
+WFI (=#BF30)	1	0	1	1	1	1	1	1	0	0	1	1	0	0	0	0	2	-
+BKPT u8	1	0	1	1	1	1	1	0	u8								※	-
+SVC u8	1	1	0	1	1	1	1	1	u8								※	-
 */})
 </script>
 ※CPSID:割込禁止、CPSIE:割込許可、WFI:割込待ち、NOP:なにもしない(no operation) R0=R0&lt;&lt;0<br>
+※BKPT,SVCのサイクル数は設定による<br>
+
+<table id="tunknown" class=tarmasm></table>
+<script>
+makeTable("tunknown", function() {/*
+マシン語不明	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	cycles	flags
+Rd = SXTB(Rm)	?																1	-
+Rd = SXTH(Rm)	?																1	-
+Rd = UXTB(Rm)	?																1	-
+Rd = UXTH(Rm)	?																1	-
+DMB	?																4	-
+DSB	?																4	-
+ISB	?																4	-
+Rd = spec_reg	?																4	-
+spec_reg = Rd	?																4	※
+SEV	?																1	-
+WFE	?																2	-
+YIELD	?																1	-
+*/})
+</script>
+※SXTB:1byteから符号拡張、SXTH:2byteから符号拡張、UXTB:1byteからゼロ拡張、UXTH:2byteからゼロ拡張<br>
+※spec_reg:APSR/IPSR/EPSR/IEPSR/IAPSR/EAPSR/PSR/MSP/PSP/PRIMASK/CONTROL<br>
+※APSRへの書き込みは、フラグを変更する<br>
+※DMB:データメモリバリア、DSB:データ同期バリア、ISB:命令同期バリア<br>
+※SEV:イベント送信、WFE:イベント待ち、YIELD:NOPとして実行(?)<br>
+
+<table id="tflags" class="tarmasm lastleft"></table>
+<script>
+makeTable("tflags", function() {/*
+フラグの意味	flag	set to 1 when...
+符号	N	演算結果が負
+ゼロ	Z	演算結果が0
+キャリー	C	加算:オーバーフロー、減算:非負、シフト:該当ビットが1
+オーバーフロー	V	加減算の結果の符号が本来の結果と違う
+*/})
+</script>
+
+<table id="tconds" class=tarmasm></table>
+<script>
+makeTable("tconds", function() {/*
+分岐条件の意味	cond	flags
+一致/ゼロ	EQ	Z = 1
+不一致/非ゼロ	NE	Z = 0
+以上(符号なし)	CS	C = 1
+未満(符号なし)	CC	C = 0
+負	MI	N = 1
+非負	PL	N = 0
+オーバーフローあり	VS	V = 1
+オーバーフローなし	VC	V = 0
+超(符号なし)	HI	Z = 0 and C = 1
+以下(符号なし)	LS	Z = 1 or C = 0
+以上(符号あり)	GE	N = V
+未満(符号あり)	LT	N != V
+超(符号あり)	GT	Z = 0 and N = V
+以下(符号あり)	LE	Z = 1 or N != V
+無条件	AL	-
+*/})
+</script>
 
 <!--
 todo
@@ -257,7 +326,19 @@ todo
 -->
 
 </p><p>
-DATA: <a href=https://www.arm.com/ja/products/processors/cortex-m/cortex-m0.php>Cortex-M0プロセッサ - Arm</a> (<a href=http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ddi0432c/CHDCICDF.html>cycles</a>)<br>
-Text: CC BY <a href=http://ichigojam.net/>ichigojam.net</a><br>
+DATA: <a href=https://www.arm.com/ja/products/processors/cortex-m/cortex-m0.php>Cortex-M0プロセッサ - Arm</a> (<a href=http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ddi0432c/CHDCICDF.html>cycles</a>),
+<a href="https://www.nxp.com/docs/en/user-guide/UM10398.pdf">UN10398 LPC111x/LPC11Cxx User manual</a>,
+<a href="http://www.coranac.com/files/gba/re-ejected-thumbref2.pdf">Thumb Cramsheet v2</a><br>
+<a href="https://ichigojam.github.io/asm15/armasm.html">Original</a> Text: CC BY <a href=http://ichigojam.net/>ichigojam.net</a><br>
+Modified By みけCAT<br>
+Modification: <a href="https://creativecommons.org/licenses/by/4.0/deed.ja">CC BY 4.0</a> by みけCAT
+<!--
 
+【参考メモ】
+
+『クリエイティブコモンズ・表示(CC BY)とは？ #opendata / 福野泰介の一日一創 / Create every day by Taisuke Fukuno』
+https://fukuno.jig.jp/216
+に貼られている画像のURLに基づき、オリジナルのライセンスは3.0？
+
+-->
 </body></html>
