mark as modified

--- a/cpuemu.html
+++ b/cpuemu.html
@@ -294,7 +294,9 @@ a {
 </div>
 <div id='credit'>
 cpuemu a1 (for <a href=http://ichigojam.net/>IchigoJam</a>)<br>
-APP: <a href='http://fukuno.jig.jp/1328'>CC BY fukuno.jig.jp</a><br>
+<a href="https://ichigojam.github.io/asm15/cpuemu.html">Original</a> APP: <a href='http://fukuno.jig.jp/1328'>CC BY fukuno.jig.jp</a><br>
+Modified By みけCAT<br>
+Modification: <a href="https://creativecommons.org/licenses/by/4.0/deed.ja">CC BY 4.0</a> by みけCAT
 </div>
 
 </body>
