fix jump instructions
--- test code 1 (expected: 12, old actual: 8) ---

R0 = 0
R1 = 0
R2 = 0
R3 = 0
GOTO @hoge
R0 = 1
R1 = 2
@hoge
R2 = 4
R3 = 8
R0 = R0 + R1
R2 = R2 + R3
R0 = R0 + R2
RET

--- test code 2 (expected: 12, old actual: hang) ---

R0 = 0
R1 = 0
R2 = 0
R3 = 0
IF 0 GOTO @hoge
R0 = 1
R1 = 2
@hoge
R2 = 4
R3 = 8
R0 = R0 + R1
R2 = R2 + R3
R0 = R0 + R2
RET

--- test code 3 (expected: 12, old actual: 8) ---

R0 = 0
R1 = 0
R2 = 0
R3 = 16
IF !0 GOTO @hoge
R0 = 1
R1 = 2
@hoge
R2 = 4
R3 = 8
R0 = R0 + R1
R2 = R2 + R3
R0 = R0 + R2
RET

--- a/cpuemu.html
+++ b/cpuemu.html
@@ -157,12 +157,12 @@ var CPU = function() {
 			this.setflg(this.r[getu(0, 3)] & this.r[getu(3, 3)]);
 		} else if (chk("11010000")) { // IF 0 GOTO n8 << 1
 			if (this.status.z)
-				this.r[15] = (getn(0, 8) + 2) << 1;
+				this.r[15] += (getn(0, 8) + 1) << 1; // not +2 because PC+=2 is done already
 		} else if (chk("11010001")) { // IF !0 GOTO n8 << 1
 			if (!this.status.z)
-				this.r[15] += (getn(0, 8) + 2) << 1;
+				this.r[15] += (getn(0, 8) + 1) << 1; // not +2 because PC+=2 is done already
 		} else if (chk("11100")) { // GOTO n11 << 1
-			this.r[15] += (getn(0, 11) + 2) << 1;
+			this.r[15] += (getn(0, 11) + 1) << 1; // not +2 because PC+=2 is done already
 		} else if (chk("0100011101110000")) { // ret
 //			alert("ret");
 			return 0;
