--- a/cpuemu.html
+++ b/cpuemu.html
@@ -62,6 +62,12 @@ var CPU = function() {
 	
 	this.mem = {
 		ram: [],
+		check: function(ad, len) {
+			for (var i = 0; i < len; i++) {
+				if (isNaN(this.ram[ad + i])) return false;
+			}
+			return true;
+		},
 		get: function(ad) {
 			if (isNaN(this.ram[ad])) return 0;
 			return this.ram[ad];
@@ -80,7 +86,12 @@ var CPU = function() {
 		},
 	};
 	this.step = function() {
+		var checkmem = document.getElementById("uninitialized_ram").value === "halt";
 		var iaddr = this.r[15];
+		if (checkmem && !this.mem.check(iaddr, 2)) {
+			alert("read uninitialized RAM as instruction #" + iaddr.toString(16));
+			return 0;
+		}
 		var code = this.mem.get16(iaddr);
 //		this.code = code;
 		this.r[15] += 2;
@@ -110,11 +121,21 @@ var CPU = function() {
 		} else if (chk("0100011000")) { // Rd = Rm
 			this.r[getu(0, 3)] = this.setflg(this.r[getu(3, 3)]);
 		} else if (chk("01111")) { // Rd = [Rn + u5]
-			this.r[getu(0, 3)] = this.setflg(this.mem.get(this.r[getu(3, 3)] + getu(6, 5)));
+			var addr = this.r[getu(3, 3)] + getu(6, 5);
+			if (checkmem && !this.mem.check(addr, 1)) {
+				alert("read uninitialized RAM at #" + iaddr.toString(16));
+				return 0;
+			}
+			this.r[getu(0, 3)] = this.setflg(this.mem.get(addr));
 		} else if (chk("01110")) { // [Rn + u5] = Rd
 			this.mem.set(this.r[getu(3, 3)] + getu(6, 5), this.setflg(this.r[getu(0, 3)]));
 		} else if (chk("0101110")) { // Rd = [Rn + Rm]
-			this.r[getu(0, 3)] = this.setflg(this.mem.get(this.r[getu(3, 3)] + this.r[getu(6, 3)]));
+			var addr = this.r[getu(3, 3)] + this.r[getu(6, 3)];
+			if (checkmem && !this.mem.check(addr, 1)) {
+				alert("read uninitialized RAM at #" + iaddr.toString(16));
+				return 0;
+			}
+			this.r[getu(0, 3)] = this.setflg(this.mem.get(addr));
 		} else if (chk("0101010")) { // [Rn + Rm] = Rd
 			this.mem.set(this.r[getu(3, 3)] + this.r[getu(6, 3)], this.setflg(this.r[getu(0, 3)]));
 		} else if (chk("00110")) { // Rd = Rd + u8
@@ -307,6 +328,10 @@ a {
 未サポートの命令<select id="unsupported_op">
 <option value="ignore">を無視</option>
 <option value="halt" selected="selected">で停止</option>
+</select><br>
+未初期化のRAMを読んだら<select id="uninitialized_ram">
+<option value="zero">0とみなす</option>
+<option value="halt" selected="selected">停止する</option>
 </select>
 </div>
 <br>
