don't change flags when they shouldn't be changed
! use *official* asm15 (NOP = 0)

--- test code 1 (expected: 1, old actual: 0) ---

R0 = 1
R1 = 0
R2 = R0 ' this won't change flags
IF 0 GOTO @hoge
R0 = 0
NOP
@hoge
NOP
RET

--- test code 2 (expected: 15, old actual: 0) ---

R0 & R0
IF 0 GOTO @hoge
R1 = R15 ' for real machine
GOTO @hoge
NOP
DATAW #1111
@hoge
NOP
R3 = 0
R1 += #80
R2 = 0
R0 = 1
[R1 + 0] = R2
IF 0 GOTO @x1
R3 += 1
@x1
NOP
R0 = 1
R0 = [R1 + 0]
IF 0 GOTO @x2
R3 += 2
@x2
NOP
R0 = 1
[R1 + R2] = R2
IF 0 GOTO @x3
R3 += 4
@x3
NOP
R0 = 1
R0 = [R1 + R2]
IF 0 GOTO @x4
R3 += 8
@x4
NOP
R0 = R3
RET

--- a/cpuemu.html
+++ b/cpuemu.html
@@ -119,25 +119,25 @@ var CPU = function() {
 		if (chk("00100")) { // Rd = u8
 			this.r[getu(8, 3)] = this.setflg(getu(0, 8));
 		} else if (chk("0100011000")) { // Rd = Rm
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(3, 3)]);
+			this.r[getu(0, 3)] = this.r[getu(3, 3)];
 		} else if (chk("01111")) { // Rd = [Rn + u5]
 			var addr = this.r[getu(3, 3)] + getu(6, 5);
 			if (checkmem && !this.mem.check(addr, 1)) {
 				alert("read uninitialized RAM at #" + iaddr.toString(16));
 				return 0;
 			}
-			this.r[getu(0, 3)] = this.setflg(this.mem.get(addr));
+			this.r[getu(0, 3)] = this.mem.get(addr);
 		} else if (chk("01110")) { // [Rn + u5] = Rd
-			this.mem.set(this.r[getu(3, 3)] + getu(6, 5), this.setflg(this.r[getu(0, 3)]));
+			this.mem.set(this.r[getu(3, 3)] + getu(6, 5), this.r[getu(0, 3)]);
 		} else if (chk("0101110")) { // Rd = [Rn + Rm]
 			var addr = this.r[getu(3, 3)] + this.r[getu(6, 3)];
 			if (checkmem && !this.mem.check(addr, 1)) {
 				alert("read uninitialized RAM at #" + iaddr.toString(16));
 				return 0;
 			}
-			this.r[getu(0, 3)] = this.setflg(this.mem.get(addr));
+			this.r[getu(0, 3)] = this.mem.get(addr);
 		} else if (chk("0101010")) { // [Rn + Rm] = Rd
-			this.mem.set(this.r[getu(3, 3)] + this.r[getu(6, 3)], this.setflg(this.r[getu(0, 3)]));
+			this.mem.set(this.r[getu(3, 3)] + this.r[getu(6, 3)], this.r[getu(0, 3)]);
 		} else if (chk("00110")) { // Rd = Rd + u8
 			this.r[getu(8, 3)] = this.setflg(this.r[getu(8, 3)] + getu(0, 8));
 		} else if (chk("00111")) { // Rd = Rd - u8
