--- a/cpuemu.html
+++ b/cpuemu.html
@@ -95,6 +95,7 @@ var CPU = function() {
 		var code = this.mem.get16(iaddr);
 //		this.code = code;
 		this.r[15] += 2;
+		if (this.r[15] >= 0x100000000) this.r[15] -= 0x100000000;
 //		console.log(code.toString(2));
 //		alert(code.toString(2));
 		var chk = function(bin) {
@@ -111,6 +112,12 @@ var CPU = function() {
 				return res - (1 << n);
 			return res;
 		};
+		var norm = function(n) {
+			var v = 0x100000000;
+			while (n >= v) n -= v;
+			while (n < 0) n += v;
+			return n;
+		};
 		this.setflg = function(n) {
 			this.status.z = n == 0;
 			this.status.n = (n >> 31) != 0;
@@ -121,71 +128,72 @@ var CPU = function() {
 		} else if (chk("0100011000")) { // Rd = Rm
 			this.r[getu(0, 3)] = this.r[getu(3, 3)];
 		} else if (chk("01111")) { // Rd = [Rn + u5]
-			var addr = this.r[getu(3, 3)] + getu(6, 5);
+			var addr = norm(this.r[getu(3, 3)] + getu(6, 5));
 			if (checkmem && !this.mem.check(addr, 1)) {
 				alert("read uninitialized RAM at #" + iaddr.toString(16));
 				return 0;
 			}
 			this.r[getu(0, 3)] = this.mem.get(addr);
 		} else if (chk("01110")) { // [Rn + u5] = Rd
-			this.mem.set(this.r[getu(3, 3)] + getu(6, 5), this.r[getu(0, 3)]);
+			this.mem.set(norm(this.r[getu(3, 3)] + getu(6, 5)), this.r[getu(0, 3)]);
 		} else if (chk("0101110")) { // Rd = [Rn + Rm]
-			var addr = this.r[getu(3, 3)] + this.r[getu(6, 3)];
+			var addr = norm(this.r[getu(3, 3)] + this.r[getu(6, 3)]);
 			if (checkmem && !this.mem.check(addr, 1)) {
 				alert("read uninitialized RAM at #" + iaddr.toString(16));
 				return 0;
 			}
 			this.r[getu(0, 3)] = this.mem.get(addr);
 		} else if (chk("0101010")) { // [Rn + Rm] = Rd
-			this.mem.set(this.r[getu(3, 3)] + this.r[getu(6, 3)], this.r[getu(0, 3)]);
+			this.mem.set(norm(this.r[getu(3, 3)] + this.r[getu(6, 3)]), this.r[getu(0, 3)]);
 		} else if (chk("00110")) { // Rd += u8
-			this.r[getu(8, 3)] = this.setflg(this.r[getu(8, 3)] + getu(0, 8));
+			this.r[getu(8, 3)] = this.setflg(norm(this.r[getu(8, 3)] + getu(0, 8)));
 		} else if (chk("00111")) { // Rd -= u8
-			this.r[getu(8, 3)] = this.setflg(this.r[getu(8, 3)] - getu(0, 8));
+			this.r[getu(8, 3)] = this.setflg(norm(this.r[getu(8, 3)] - getu(0, 8)));
 		} else if (chk("00000")) { // Rd = Rm << u5
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(3, 3)] << getu(6, 5));
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] << getu(6, 5)));
 		} else if (chk("00001")) { // Rd = Rm >> u5
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(3, 3)] >> getu(6, 5));
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] >> getu(6, 5)));
 		} else if (chk("0001100")) { // Rd = Rn + Rm
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(3, 3)] + this.r[getu(6, 3)]);
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] + this.r[getu(6, 3)]));
 		} else if (chk("0001101")) { // Rd = Rn - Rm
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(3, 3)] - this.r[getu(6, 3)]);
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] - this.r[getu(6, 3)]));
 		} else if (chk("0001110")) { // Rd = Rn + u3
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(3, 3)] + getu(6, 3));
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] + getu(6, 3)));
 		} else if (chk("0001111")) { // Rd = Rn - u3
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(3, 3)] - getu(6, 3));
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] - getu(6, 3)));
 		} else if (chk("0100000000")) { // Rd = Rd & Rm
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(0, 3)] & this.r[getu(3, 3)]);
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] & this.r[getu(3, 3)]));
 		} else if (chk("0100000001")) { // Rd = Rd ^ Rm
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(0, 3)] ^ this.r[getu(3, 3)]);
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] ^ this.r[getu(3, 3)]));
 		} else if (chk("0100000010")) { // Rd = Rd << Rs
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(0, 3)] << this.r[getu(3, 3)]);
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] << this.r[getu(3, 3)]));
 		} else if (chk("0100000011")) { // Rd = Rd >> Rs
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(0, 3)] >> this.r[getu(3, 3)]);
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] >> this.r[getu(3, 3)]));
 		} else if (chk("0100001001")) { // Rd = -Rm
-			this.r[getu(0, 3)] = this.setflg(-this.r[getu(3, 3)]);
+			this.r[getu(0, 3)] = this.setflg(norm(-this.r[getu(3, 3)]));
 		} else if (chk("0100001100")) { // Rd = Rd | Rm
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(0, 3)] | this.r[getu(3, 3)]);
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] | this.r[getu(3, 3)]));
 		} else if (chk("0100001101")) { // Rd = Rd * Rm
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(0, 3)] * this.r[getu(3, 3)]);
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] * this.r[getu(3, 3)]));
 		} else if (chk("0100001110")) { // Rd = Rd & ~Rm
-			this.r[getu(0, 3)] = this.setflg(this.r[getu(0, 3)] & ~this.r[getu(3, 3)]);
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] & ~this.r[getu(3, 3)]));
 		} else if (chk("0100001111")) { // Rd = ~Rm
-			this.r[getu(0, 3)] = this.setflg(~this.r[getu(3, 3)]);
+			this.r[getu(0, 3)] = this.setflg(norm(~this.r[getu(3, 3)]));
 		} else if (chk("00101")) { // Rn - u8
-			this.setflg(this.r[getu(8, 3)] - getu(0, 8));
+			this.setflg(norm(this.r[getu(8, 3)] - getu(0, 8)));
 		} else if (chk("0100001010")) { // Rn - Rm
-			this.setflg(this.r[getu(0, 3)] - this.r[getu(3, 3)]);
+			this.setflg(norm(this.r[getu(0, 3)] - this.r[getu(3, 3)]));
 		} else if (chk("0100001000")) { // Rn & Rm
-			this.setflg(this.r[getu(0, 3)] & this.r[getu(3, 3)]);
+			this.setflg(norm(this.r[getu(0, 3)] & this.r[getu(3, 3)]));
 		} else if (chk("11010000")) { // IF 0 GOTO n8 << 1
-			if (this.status.z)
-				this.r[15] += (getn(0, 8) + 1) << 1; // not +2 because PC+=2 is done already
+			if (this.status.z) // not +2 because PC+=2 is done already
+				this.r[15] = norm(this.r[15] + ((getn(0, 8) + 1) << 1));
 		} else if (chk("11010001")) { // IF !0 GOTO n8 << 1
-			if (!this.status.z)
-				this.r[15] += (getn(0, 8) + 1) << 1; // not +2 because PC+=2 is done already
+			if (!this.status.z) // not +2 because PC+=2 is done already
+				this.r[15] = norm(this.r[15] + ((getn(0, 8) + 1) << 1));
 		} else if (chk("11100")) { // GOTO n11 << 1
-			this.r[15] += (getn(0, 11) + 1) << 1; // not +2 because PC+=2 is done already
+			// not +2 because PC+=2 is done already
+			this.r[15] = norm(this.r[15] + ((getn(0, 11) + 1) << 1)); 
 		} else if (chk("0100011101110000")) { // ret
 //			alert("ret");
 			return 0;
