improve right shift and multiplication
--- test code 0 (expected: 1, old actual: 0) ---

R0 = 1
R0 = R0 << 31
R0 -= 1
R0 *= R0
RET

--- test code 1 (expected: 255, old actual: 4294967295) ---

R0 = 1
R0 = -R0
R0 = R0 >> 24
RET

--- test code 2 (expected: 255, old actual: 4294967295) ---

R0 = 1
R0 = -R0
R1 = 24
R0 >>= R1
RET

--- a/cpuemu.html
+++ b/cpuemu.html
@@ -152,7 +152,7 @@ var CPU = function() {
 		} else if (chk("00000")) { // Rd = Rm << u5
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] << getu(6, 5)));
 		} else if (chk("00001")) { // Rd = Rm >> u5
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] >> getu(6, 5)));
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] >>> getu(6, 5)));
 		} else if (chk("0001100")) { // Rd = Rn + Rm
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] + this.r[getu(6, 3)]));
 		} else if (chk("0001101")) { // Rd = Rn - Rm
@@ -168,13 +168,21 @@ var CPU = function() {
 		} else if (chk("0100000010")) { // Rd = Rd << Rs
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] << this.r[getu(3, 3)]));
 		} else if (chk("0100000011")) { // Rd = Rd >> Rs
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] >> this.r[getu(3, 3)]));
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] >>> this.r[getu(3, 3)]));
 		} else if (chk("0100001001")) { // Rd = -Rm
 			this.r[getu(0, 3)] = this.setflg(norm(-this.r[getu(3, 3)]));
 		} else if (chk("0100001100")) { // Rd = Rd | Rm
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] | this.r[getu(3, 3)]));
 		} else if (chk("0100001101")) { // Rd = Rd * Rm
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] * this.r[getu(3, 3)]));
+			var ret = 0;
+			var val = this.r[getu(0, 3)];
+			var mult = this.r[getu(3, 3)];
+			for (var i = 0; i < 32; i++) {
+				if (mult & 1) ret = norm(ret + val);
+				val = norm(val + val);
+				mult >>>= 1;
+			}
+			this.r[getu(0, 3)] = this.setflg(ret);
 		} else if (chk("0100001110")) { // Rd = Rd & ~Rm
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] & ~this.r[getu(3, 3)]));
 		} else if (chk("0100001111")) { // Rd = ~Rm
