--- a/cpuemu.html
+++ b/cpuemu.html
@@ -174,6 +174,7 @@ var CPU = function() {
 		} else if (chk("0100001100")) { // Rd = Rd | Rm
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] | this.r[getu(3, 3)]));
 		} else if (chk("0100001101")) { // Rd = Rd * Rm
+			// don't do this.r[getu(0, 3)] * this.r[getu(3, 3)], or the result will be inaccurate
 			var ret = 0;
 			var val = this.r[getu(0, 3)];
 			var mult = this.r[getu(3, 3)];
