--- a/cpuemu.html
+++ b/cpuemu.html
@@ -161,19 +161,19 @@ var CPU = function() {
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] + getu(6, 3)));
 		} else if (chk("0001111")) { // Rd = Rn - u3
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] - getu(6, 3)));
-		} else if (chk("0100000000")) { // Rd = Rd & Rm
+		} else if (chk("0100000000")) { // Rd &= Rm
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] & this.r[getu(3, 3)]));
-		} else if (chk("0100000001")) { // Rd = Rd ^ Rm
+		} else if (chk("0100000001")) { // Rd ^= Rm
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] ^ this.r[getu(3, 3)]));
-		} else if (chk("0100000010")) { // Rd = Rd << Rs
+		} else if (chk("0100000010")) { // Rd <<= Rs
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] << this.r[getu(3, 3)]));
-		} else if (chk("0100000011")) { // Rd = Rd >> Rs
+		} else if (chk("0100000011")) { // Rd >>= Rs
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] >>> this.r[getu(3, 3)]));
 		} else if (chk("0100001001")) { // Rd = -Rm
 			this.r[getu(0, 3)] = this.setflg(norm(-this.r[getu(3, 3)]));
-		} else if (chk("0100001100")) { // Rd = Rd | Rm
+		} else if (chk("0100001100")) { // Rd |= Rm
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] | this.r[getu(3, 3)]));
-		} else if (chk("0100001101")) { // Rd = Rd * Rm
+		} else if (chk("0100001101")) { // Rd *= Rm
 			// don't do this.r[getu(0, 3)] * this.r[getu(3, 3)], or the result will be inaccurate
 			var ret = 0;
 			var val = this.r[getu(0, 3)];
@@ -184,7 +184,7 @@ var CPU = function() {
 				mult >>>= 1;
 			}
 			this.r[getu(0, 3)] = this.setflg(ret);
-		} else if (chk("0100001110")) { // Rd = Rd & ~Rm
+		} else if (chk("0100001110")) { // Rd &= ~Rm
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] & ~this.r[getu(3, 3)]));
 		} else if (chk("0100001111")) { // Rd = ~Rm
 			this.r[getu(0, 3)] = this.setflg(norm(~this.r[getu(3, 3)]));
@@ -194,16 +194,16 @@ var CPU = function() {
 			this.setflg(norm(this.r[getu(0, 3)] - this.r[getu(3, 3)]));
 		} else if (chk("0100001000")) { // Rn & Rm
 			this.setflg(norm(this.r[getu(0, 3)] & this.r[getu(3, 3)]));
-		} else if (chk("11010000")) { // IF 0 GOTO n8 << 1
+		} else if (chk("11010000")) { // IF 0 GOTO n8
 			if (this.status.z) // not +2 because PC+=2 is done already
 				this.r[15] = norm(this.r[15] + ((getn(0, 8) + 1) << 1));
-		} else if (chk("11010001")) { // IF !0 GOTO n8 << 1
+		} else if (chk("11010001")) { // IF !0 GOTO n8
 			if (!this.status.z) // not +2 because PC+=2 is done already
 				this.r[15] = norm(this.r[15] + ((getn(0, 8) + 1) << 1));
-		} else if (chk("11100")) { // GOTO n11 << 1
+		} else if (chk("11100")) { // GOTO n11
 			// not +2 because PC+=2 is done already
 			this.r[15] = norm(this.r[15] + ((getn(0, 11) + 1) << 1));
-		} else if (chk("0100011101110000")) { // ret
+		} else if (chk("0100011101110000")) { // RET
 //			alert("ret");
 			return 0;
 		} else {
