fix link to cpuemu in asm15

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ window.onload = function() {
 <ul>
 <li>参考<br>
 <a href="armasm.html">Cortex-M0 ARMマシン語表（抜粋）</a><br>
-<a href="http://fukuno.jig.jp/app/IchigoJam/cpuemu.html">IchigoJam マシン語エミュレーター on web（一部のみ対応）</a><br>
+<a href="cpuemu.html">IchigoJam マシン語エミュレーター on web（一部のみ対応）</a><br>
 2進数表記(binary)をコピペして動かせます (<a href="http://fukuno.jig.jp/1328">説明</a>)</li>
 </li>
 <li>連載、IchigoJamではじめる、ARMマシン語入門<br>
