--- a/cpuemu.html
+++ b/cpuemu.html
@@ -125,8 +125,20 @@ var CPU = function() {
 		};
 		if (chk("00100")) { // Rd = u8
 			this.r[getu(8, 3)] = this.setflg(getu(0, 8));
-		} else if (chk("0100011000")) { // Rd = Rm
-			this.r[getu(0, 3)] = this.r[getu(3, 3)];
+		} else if (chk("01000110")) { // Rd = Rm
+			var dstidx = getu(0, 3) | (getu(7, 1) << 3);
+			var srcidx = getu(3, 4);
+			var srcvalue;
+			if (srcidx == 15) { // PC
+				srcvalue = norm(this.r[srcidx] + 2); // PC + 4 = (PC + 2) + 2
+			} else {
+				srcvalue = this.r[srcidx];
+			}
+			if (dstidx == 15) { // PC
+				this.r[dstidx] = norm(srcvalue & 0xfffffffe);
+			} else {
+				this.r[dstidx] = srcvalue;
+			}
 		} else if (chk("01111")) { // Rd = [Rn + u5]
 			var addr = norm(this.r[getu(3, 3)] + getu(6, 5));
 			if (checkmem && !this.mem.check(addr, 1)) {
