--- a/cpuemu.html
+++ b/cpuemu.html
@@ -139,52 +139,20 @@ var CPU = function() {
 			} else {
 				this.r[dstidx] = srcvalue;
 			}
-		} else if (chk("01111")) { // Rd = [Rn + u5]
-			var addr = norm(this.r[getu(3, 3)] + getu(6, 5));
-			if (checkmem && !this.mem.check(addr, 1)) {
-				alert("read uninitialized RAM at #" + iaddr.toString(16));
-				return 0;
-			}
-			this.r[getu(0, 3)] = this.mem.get(addr);
-		} else if (chk("01110")) { // [Rn + u5] = Rd
-			this.mem.set(norm(this.r[getu(3, 3)] + getu(6, 5)), this.r[getu(0, 3)]);
-		} else if (chk("0101110")) { // Rd = [Rn + Rm]
-			var addr = norm(this.r[getu(3, 3)] + this.r[getu(6, 3)]);
-			if (checkmem && !this.mem.check(addr, 1)) {
-				alert("read uninitialized RAM at #" + iaddr.toString(16));
-				return 0;
-			}
-			this.r[getu(0, 3)] = this.mem.get(addr);
-		} else if (chk("0101010")) { // [Rn + Rm] = Rd
-			this.mem.set(norm(this.r[getu(3, 3)] + this.r[getu(6, 3)]), this.r[getu(0, 3)]);
 		} else if (chk("00110")) { // Rd += u8
 			this.r[getu(8, 3)] = this.setflg(norm(this.r[getu(8, 3)] + getu(0, 8)));
 		} else if (chk("00111")) { // Rd -= u8
 			this.r[getu(8, 3)] = this.setflg(norm(this.r[getu(8, 3)] - getu(0, 8)));
-		} else if (chk("00000")) { // Rd = Rm << u5
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] << getu(6, 5)));
-		} else if (chk("00001")) { // Rd = Rm >> u5
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] >>> getu(6, 5)));
-		} else if (chk("0001100")) { // Rd = Rn + Rm
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] + this.r[getu(6, 3)]));
-		} else if (chk("0001101")) { // Rd = Rn - Rm
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] - this.r[getu(6, 3)]));
 		} else if (chk("0001110")) { // Rd = Rn + u3
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] + getu(6, 3)));
 		} else if (chk("0001111")) { // Rd = Rn - u3
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] - getu(6, 3)));
-		} else if (chk("0100000000")) { // Rd &= Rm
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] & this.r[getu(3, 3)]));
-		} else if (chk("0100000001")) { // Rd ^= Rm
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] ^ this.r[getu(3, 3)]));
-		} else if (chk("0100000010")) { // Rd <<= Rs
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] << this.r[getu(3, 3)]));
-		} else if (chk("0100000011")) { // Rd >>= Rs
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] >>> this.r[getu(3, 3)]));
+		} else if (chk("0001100")) { // Rd = Rn + Rm
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] + this.r[getu(6, 3)]));
+		} else if (chk("0001101")) { // Rd = Rn - Rm
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] - this.r[getu(6, 3)]));
 		} else if (chk("0100001001")) { // Rd = -Rm
 			this.r[getu(0, 3)] = this.setflg(norm(-this.r[getu(3, 3)]));
-		} else if (chk("0100001100")) { // Rd |= Rm
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] | this.r[getu(3, 3)]));
 		} else if (chk("0100001101")) { // Rd *= Rm
 			// don't do this.r[getu(0, 3)] * this.r[getu(3, 3)], or the result will be inaccurate
 			var ret = 0;
@@ -196,10 +164,40 @@ var CPU = function() {
 				mult >>>= 1;
 			}
 			this.r[getu(0, 3)] = this.setflg(ret);
-		} else if (chk("0100001110")) { // Rd &= ~Rm
-			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] & ~this.r[getu(3, 3)]));
+		} else if (chk("00000")) { // Rd = Rm << u5
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] << getu(6, 5)));
+		} else if (chk("00001")) { // Rd = Rm >> u5
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] >>> getu(6, 5)));
+		} else if (chk("0100000010")) { // Rd <<= Rs
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] << this.r[getu(3, 3)]));
+		} else if (chk("0100000011")) { // Rd >>= Rs
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] >>> this.r[getu(3, 3)]));
 		} else if (chk("0100001111")) { // Rd = ~Rm
 			this.r[getu(0, 3)] = this.setflg(norm(~this.r[getu(3, 3)]));
+		} else if (chk("0100000000")) { // Rd &= Rm
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] & this.r[getu(3, 3)]));
+		} else if (chk("0100001100")) { // Rd |= Rm
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] | this.r[getu(3, 3)]));
+		} else if (chk("0100000001")) { // Rd ^= Rm
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] ^ this.r[getu(3, 3)]));
+		} else if (chk("01111")) { // Rd = [Rn + u5]
+			var addr = norm(this.r[getu(3, 3)] + getu(6, 5));
+			if (checkmem && !this.mem.check(addr, 1)) {
+				alert("read uninitialized RAM at #" + iaddr.toString(16));
+				return 0;
+			}
+			this.r[getu(0, 3)] = this.mem.get(addr);
+		} else if (chk("0101110")) { // Rd = [Rn + Rm]
+			var addr = norm(this.r[getu(3, 3)] + this.r[getu(6, 3)]);
+			if (checkmem && !this.mem.check(addr, 1)) {
+				alert("read uninitialized RAM at #" + iaddr.toString(16));
+				return 0;
+			}
+			this.r[getu(0, 3)] = this.mem.get(addr);
+		} else if (chk("01110")) { // [Rn + u5] = Rd
+			this.mem.set(norm(this.r[getu(3, 3)] + getu(6, 5)), this.r[getu(0, 3)]);
+		} else if (chk("0101010")) { // [Rn + Rm] = Rd
+			this.mem.set(norm(this.r[getu(3, 3)] + this.r[getu(6, 3)]), this.r[getu(0, 3)]);
 		} else if (chk("00101")) { // Rn - u8
 			this.setflg(norm(this.r[getu(8, 3)] - getu(0, 8)));
 		} else if (chk("0100001010")) { // Rn - Rm
@@ -218,6 +216,8 @@ var CPU = function() {
 		} else if (chk("0100011101110000")) { // RET
 //			alert("ret");
 			return 0;
+		} else if (chk("0100001110")) { // BIC Rd, Rm (Rd &= ~Rm)
+			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(0, 3)] & ~this.r[getu(3, 3)]));
 		} else {
 			if (get("unsupported_op").value === "halt") {
 				var inst = code.toString(2);
