--- a/cpuemu.html
+++ b/cpuemu.html
@@ -143,6 +143,8 @@ var CPU = function() {
 			this.r[getu(8, 3)] = this.setflg(norm(this.r[getu(8, 3)] + getu(0, 8)));
 		} else if (chk("00111")) { // Rd -= u8
 			this.r[getu(8, 3)] = this.setflg(norm(this.r[getu(8, 3)] - getu(0, 8)));
+		} else if (chk("10100")) { // Rd = PC + u8
+			this.r[getu(8, 3)] = norm(this.r[15] + 2 + (getu(0, 8) << 2));
 		} else if (chk("0001110")) { // Rd = Rn + u3
 			this.r[getu(0, 3)] = this.setflg(norm(this.r[getu(3, 3)] + getu(6, 3)));
 		} else if (chk("0001111")) { // Rd = Rn - u3
