improve instruction Rd = PC + u8
--- test case 1 (expected: 16, old actual: 18) ---

R1 = R15
R2 = PC + 5
R0 = R2 - R1
RET

--- a/cpuemu.html
+++ b/cpuemu.html
@@ -168,7 +168,7 @@ var CPU = function() {
 			} else if (chk("00111")) { // Rd -= u8
 				this.r[getu(8, 3)] = this.setflg(norm(this.r[getu(8, 3)] - getu(0, 8)));
 			} else if (chk("10100")) { // Rd = PC + u8
-				this.r[getu(8, 3)] = norm(this.r[15] + 2 + (getu(0, 8) << 2));
+				this.r[getu(8, 3)] = norm((this.r[15] + 2 + (getu(0, 8) << 2)) & 0xfffffffc);
 			} else if (chk("01000100")) { // Rd += Rm
 				var dstidx = getu(0, 3) | (getu(7, 1) << 3);
 				var srcidx = getu(3, 4);
